tests/NormalTests/paczka1/fuzzy1/42059601.err
Error in line 1: ZxWrX S89 80,4
Error in line 5: fNUT S89 22,6
Error in line 13: ZxWrX S361 88,6
Error in line 21: ZxWrX A911 46,3
Error in line 29: S361 A911 80,8
Error in line 32: S361 S361 75,8
Error in line 37: ak3dX S89 44,7
